Tests/Good/Else/else1.tig
if 12 then "abc" else testidentifier 