Tests/Bad/Else/else3.tig
if then a="bonjour" else a="aurevoir"
